# qemu

./: MAINTAINERS  configure  meson.build
configs/devices/loongarch64-softmmu/: default.mak
configs/targets/: loongarch64-softmmu.mak
disas/: loongarch.c
hw/acpi/: Kconfig  ls7a.c  meson.build
hw/intc/: Kconfig  loongarch_extioi.c  loongarch_ipi.c  loongarch_pch_msi.c  loongarch_pch_pic.c  meson.build  trace-events
hw/loongarch/: Kconfig  acpi-build.c  fw_cfg.c  fw_cfg.h  ipi.c  loongarch_int.c  loongson3.c  ls3a5000_virt.c  meson.build
hw/pci-host/: Kconfig  ls7a.c  meson.build
hw/rtc/: Kconfig  ls7a_rtc.c
include/: elf.h
include/exec/: cpu_ldst.h
include/hw/acpi/: ls7a.h
include/hw/intc/: loongarch_extioi.h  loongarch_ipi.h  loongarch_pch_msi.h  loongarch_pch_pic.h
include/hw/loongarch/: gipi.h  loongarch.h
include/hw/pci-host/: ls7a.h
include/user/: guest-base.h  guest-host.h
linux-user/: elfload.c  main.c  syscall_defs.h
linux-user/loongarch64/: cpu_loop.c  elfload.c  signal.c  target_syscall.h
qapi/: machine.json
softmmu/: qdev-monitor.c
